# clipboard-formatter

./: .gitignore  CHANGELOG.md  Cargo.toml  Changes.md  LICENSE  README.md  exclusions.json  release.toml  replacements.json
.github/workflows/: ci.yml  manual_windows_build.yml  release.yml
docs/superpowers/plans/: 2026-05-13-skip-non-text-clipboard.md
docs/superpowers/specs/: 2026-05-13-skip-non-text-clipboard-design.md
hooks/: pre-commit  pre-push
src/: default_config.toml  default_exclusions.json  default_replacements.json  main.rs
