[package]
name = "clipboard-formatter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clipboard = "0.5"
difference = "2.0"
dirs = "6.0"
env_logger = "0.11"
log = "0.4"
notify = "8.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
thiserror = "2.0"
toml = "0.8"
unicode-normalization = "0.1"
